	  From Marco Krahl (2014-12-19).
	* configs/stm32f429i-disco/src/stm32_lcd.c:  Add support for
	  initializing ltdc framebuffer and the configured lcd display.  This
	  adds support for initializing of the ltdc controller and the lcd
	  device connected on the stm32f429i-disco. The following methods are
	  provided for the generic fb interface: up_fbinitialize,
	  up_fbgetvplane, and fb_uninitialize. The following methods are
	  provided for the ltdc interface: up_ltdcgetlayer. From Marco Krahl
	  (2014-12-19).
	* zrch/arm/src/stm32/Kconfig: Add configuration option for ltdc.  This
	  adds the following ltdc configuration options: dither support, cmap
	  support, is this the right place for CONFIG_FB_CMAP?, support for
	  extended ltdc interface. From Marco Krahl (2014-12-19).
	*  nuttx/configs/stm32f429i-disco: Enable configuration of framebuffer
	  support for the ltdc controller. From Marco Krahl (2014-12-19).
	* configs/stm32f429i-disco/src/stm32_boot.c: Initialize ltdc during
	  bootup. From Marco Krahl (2014-12-19).
	* configs/stm32f429i-disco/ltdc: Add default platform configuration to
	  test framebuffer support for the ltdc. . From Marco Krahl
	  (2014-12-19).
	* libnx/nxfonts/nxfonts_getfont.c: A patch to add previous added font
	  into nxf_getfonthandle function.  From  Pierre-Noel Bouteville
	  (2014-12-19).
	* arch/arm/src/tiva, include/tiva, and many configurations:  Change
	  negative Tiva logic CONFIG_SSIx_DISABLE to positive logic
	  CONFIG_TIVA_SSIx.  Add support for SSI2 and SSI3 (2014-12-21).
	* arch/arm/src/efm32/efm32_pwm.c/.h, efm32_timer.c/.h, and related
	  build files: Add support for timer/PWM on the EFM32GG.  From
	  Pierre-noel Bouteville (2014-12-26).
	* drivers/serial/Kconfig, serial.c, serialirq.c, and
	  include/nuttx/serial/serial.h:  Add watermark levels to the serial
	  RX flow control logic.  Modify the rxflowcontrol method to accept
	  the number of bytes in the buffer and a boolean indication of which