@@ -344,11 +344,19 @@ static int up_setcursor(FAR struct fb_vtable_s *vtable,
  * Name: up_fbinitialize
  *
  * Description:
- *   Initialize the video hardware
+ *   Initialize the framebuffer video hardware associated with the display.
+ *
+ * Input parameters:
+ *   display - In the case of hardware with multiple displays, this
+ *     specifies the display.  Normally this is zero.
+ *
+ * Returned Value:
+ *   Zero is returned on success; a negated errno value is returned on any
+ *   failure.
  *
  ****************************************************************************/
 
-int up_fbinitialize(void)
+int up_fbinitialize(int display)
 {
 #ifdef CONFIG_SIM_X11FB
   return up_x11initialize(CONFIG_SIM_FBWIDTH, CONFIG_SIM_FBHEIGHT,
@@ -363,17 +371,21 @@ int up_fbinitialize(void)
  * Name: up_fbgetvplane
  *
  * Description:
- *   Return a a reference to the framebuffer object for the specified video plane.
+ *   Return a a reference to the framebuffer object for the specified video
+ *   plane of the specified plane.  Many OSDs support multiple planes of video.
  *
  * Input parameters:
- *   None
+ *   display - In the case of hardware with multiple displays, this
+ *     specifies the display.  Normally this is zero.
+ *   vplane - Identifies the plane being queried.
  *
- * Returned value:
- *   Reference to the framebuffer object (NULL on failure)
+ * Returned Value:
+ *   A non-NULL pointer to the frame buffer access structure is returned on
+ *   success; NULL is returned on any failure.
  *
  ****************************************************************************/
 
-FAR struct fb_vtable_s *up_fbgetvplane(int vplane)
+FAR struct fb_vtable_s *up_fbgetvplane(int display, int vplane)
 {
   if (vplane == 0)
     {
@@ -386,10 +398,21 @@ FAR struct fb_vtable_s *up_fbgetvplane(int vplane)
 }
 
 /****************************************************************************
- * Name: up_fbteardown
+ * Name: up_fbuninitialize
+ *
+ * Description:
+ *   Uninitialize the framebuffer support for the specified display.
+ *
+ * Input Parameters:
+ *   display - In the case of hardware with multiple displays, this
+ *     specifies the display.  Normally this is zero.
+ *
+ * Returned Value:
+ *   None
+ *
  ****************************************************************************/
 
-void fb_uninitialize(void)
+void up_fbuninitialize(int display)
 {
 }
 
